--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.10.1",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
     "clean-webpack-plugin": "^3.0.0",
     "react": "^16.13.1",
