--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -4,7 +4,7 @@ name: CD with Gradle
 # events but only for the master branch
 on: 
   push:
-    branches: feature_be/action
+    branches: [ dev, master ]
 
 env:
     PROJECT_NAME: issue-tracker-08
@@ -37,3 +37,6 @@ jobs:
 
     - name: Upload to S3
       run: aws deploy push --application-name codesquad-app --s3-location s3://codesquad-ever/$PROJECT_NAME/build.zip --source .
+
+    - name: Code Deploy
+      run: aws deploy create-deployment --application-name codesquad-app --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name codesquad-DeployGroup --s3-location bucket=codesquad-ever,bundleType=zip,key=$PROJECT_NAME/build.zip
