--- a/FE/appspec.yml
+++ b/FE/appspec.yml
@@ -3,15 +3,16 @@ os: linux
 
 files:
   - source: /
-    destination: /home/ubuntu/issue-tracker/BE
+    destination: /home/ubuntu/issue-tracker/FE
+
 permissions:
-  - object: /home/ubuntu/issue-tracker/BE
+  - object: /home/ubuntu/issue-tracker/FE
     owner: ubuntu
     group: ubuntu
     mode: 755
 
 hooks:
   AfterInstall:
-    - location: deploy-be.sh
+    - location: deploy-fe.sh
       timeout: 60
       runas: root
