--- a/.github/workflows/node-cd.yml
+++ b/.github/workflows/node-cd.yml
@@ -49,4 +49,4 @@ jobs:
       run: aws deploy push --application-name codesquad-app --s3-location s3://codesquad-ever/$PROJECT_NAME/build-fe.zip --source .
 
     - name: Code Deploy
-      run: aws deploy create-deployment --application-name codesquad-app --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name codesquad-DeployGroup --s3-location bucket=codesquad-ever,bundleType=zip,key=$PROJECT_NAME/build-fe.zip
+      run: aws deploy create-deployment --application-name codesquad-app --deployment-config-name CodeDeployDefault.OneAtATime --deployment-group-name FE-DeployGroup --s3-location bucket=codesquad-ever,bundleType=zip,key=$PROJECT_NAME/build-fe.zip
