--- a/.github/workflows/node-cd.yml
+++ b/.github/workflows/node-cd.yml
@@ -34,9 +34,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - run: npm ci
+    - run: npm install
 
-    - run: npm run build-dev --if-present
+    - run: npm run build
     
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
