--- a/FE/package.json
+++ b/FE/package.json
@@ -12,6 +12,7 @@
     "@material-ui/lab": "^4.0.0-alpha.55",
     "axios": "^0.19.2",
     "clean-webpack-plugin": "^3.0.0",
+    "markdown-it": "^11.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -30,11 +31,13 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "core-js": "3",
+    "css-loader": "^3.5.3",
     "dotenv-webpack": "^1.8.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "moment": "^2.26.0",
     "react-timeago": "^4.4.0",
+    "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
