[#37] refactor: actions 적용되는 브랜치에서 현재 브랜치 제거

--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -4,7 +4,7 @@ name: CD with Gradle
 # events but only for the master branch
 on: 
   push:
-    branches: [ dev, master, feature_be/action ]
+    branches: [ dev, master ]
 
 env:
     PROJECT_NAME: issue-tracker-08
