--- a/FE/package.json
+++ b/FE/package.json
@@ -18,6 +18,8 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1",
     "styled-reset": "^4.1.5"
   },
