[#27] fix: spring.jpa.open-in-view: false 추가
- Spring Boot에서는 spring.jpa.open-in-view를 true로 설정하고 있는데, 이는 OSIV 측면에서 매우 부적절하다고 함. 즉 성능이나 scalability,, 즉 확장성 측면에서 볼 때 false로 해야 하는데 true로 하고 있어 warning 경고 사인

--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
     show-sql: true
 
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
 
     # MySQL 을 사용할 것.
     database: mysql
@@ -22,6 +22,8 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+    open-in-view: false
 
 github:
   client-id: e75bd1cffaa68832aac4
