[#37] refactor: .env s3 upload 로직 추가

--- a/.github/workflows/node-cd.yml
+++ b/.github/workflows/node-cd.yml
@@ -29,6 +29,16 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ap-northeast-2
+
+    - name: download dotenv
+      run: aws s3 cp s3://codesquad-ever/.env.production
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
@@ -38,13 +48,6 @@ jobs:
 
     - run: npm run build
     
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-northeast-2
-
     - name: Upload to S3
       run: aws deploy push --application-name codesquad-app --s3-location s3://codesquad-ever/$PROJECT_NAME/build-fe.zip --source .
 
