[#37] fix: branch 경로 수정

--- a/.github/workflows/node-cd.yml
+++ b/.github/workflows/node-cd.yml
@@ -5,7 +5,7 @@ name: CD with Node.js
 
 on:
   push:
-    branches: [ dev, master ]
+    branches: [ dev, master, feature_be/action ]
 
 env:
     PROJECT_NAME: issue-tracker-08
