--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.0'
 
     //QueryDSL
-    implementation 'com.querydsl:querydsl-jpa'
+    implementation 'com.querydsl:querydsl-jpa:4.3.1'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
