[#123] chore: 서버 실행시 초기 데이터 추가

--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -8,6 +8,7 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
+    initialization-mode: always
 
   # API 호출시, SQL 문을 콘솔에 출력한다
   jpa:
