--- a/FE/package.json
+++ b/FE/package.json
@@ -39,6 +39,7 @@
     "html-webpack-plugin": "^4.3.0",
     "moment": "^2.26.0",
     "react-timeago": "^4.4.0",
+    "redux-devtools-extension": "^2.13.8",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
